# PokemonV2

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  cpp.hint  log.md  log.txt
PokemonV2Code/: main.cpp
PokemonV2Code/Headers/: util.h
PokemonV2Code/Headers/Core/PlayPokemon/: playPokemon.h
PokemonV2Code/Headers/Core/SceneManager/: sceneManager.h  sceneRegistry.h
PokemonV2Code/Headers/Resource/: picture.h  resourceStringName.h
PokemonV2Code/Headers/UI/Button/: buttonBase.h  clickButton.h
PokemonV2Code/Headers/UI/Pokemon/: PokemonBulbasaur.h  pokemonBase.h
PokemonV2Code/Headers/UI/Resource/: picture.h  resourceStringName.h
PokemonV2Code/Headers/UI/Scene/: sceneBase.h  sceneMenu.h  sceneSelector.h
PokemonV2Code/Sources/: util.cpp
PokemonV2Code/Sources/Core/PlayPokemon/: playPokemon.cpp
PokemonV2Code/Sources/Core/SceneManager/: sceneManager.cpp
PokemonV2Code/Sources/Resource/: picture.cpp  resourceStringName.cpp
PokemonV2Code/Sources/UI/Button/: buttonBase.cpp  clickButton.cpp
PokemonV2Code/Sources/UI/Pokemon/: PokemonBulbasaur.cpp  pokemonBase.cpp
PokemonV2Code/Sources/UI/Scene/: sceneBase.cpp  sceneMenu.cpp  sceneSelector.cpp
Resources/: resources.qrc
